--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
+body, html, #root, .app, .container {
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  font-size: 28px;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #282c34;
+}
+
+.topDiv {
+  width: 100%;
+  height: 100%;
+  background-color:  #282c34;
+}
+
+.headerDiv {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  background-color: #353942;
+}
+
+.logo {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: rgb(204, 203, 203);
+}
+
+.registerLink {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.loginForm {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 400px;
+  background-color: #353942;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  padding: 30px;
+  color: #fff;
+  font-size: 22px;
+}
+
+.footerDiv {
+  font-size: 18px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 10%;
+  height: 5%;
+  transform: translate(450%, 1300%);
+}
+
+a:link {
+  color: #777b83;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #777b83;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:active  {
+  color: #777b83;
+  text-decoration: none;
+}
+
+.inputField {
+  padding-top: 16px;
+}
+
+.input {
+  box-sizing: border-box;
+  outline: none;
+  border: solid 2px #414040;
+  border-radius: 6px;
+  color: #292929;
+  width: 100%;
+  padding: 12px;
+  font-size: 14px;
+  background: rgba(255, 255, 255, 1);
+}
+
+.submitButton {
+  padding-top: 16px;
+}
+
+
+.btn {
+  width: 100%;
+  min-width: 280px;
+  font-size: 14px;
+  font-weight: bold;
+  border: solid 1px #282c34;
+  cursor: pointer;
+  background-color: #282c34;
   color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover {
+  background-color:#2b2f36;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.aboutUsDiv {
+  width: 100%;
+  height: 100%;
+  background-color: #282c34;
+}
+
+.integrantesDiv {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 400px;
+  background-color: #353942;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  padding: 30px;
+  color: white;
 }
